[package]
name = "yeelight"
version = "0.4.0-rc.1"
authors = ["Leixb <abone9999@gmail.com>"]
edition = "2021"
description = "Rust CLI and API bindings for yeelight WiFi Light Inter-Operation"
documentation = "https://docs.rs/yeelight"
readme = "./README.md"
repository = "https://github.com/leixb/yeelight"
license = "MIT"
keywords = ["yeelight", "iot", "api", "cli"]
categories = ["api-bindings", "command-line-interface"]

[lib]
name = "yeelight"
path = "src/lib.rs"

[[bin]]
name = "yeelight"
path = "src/bin/cli/main.rs"

[dependencies]
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
itertools = { version = "0.10.3", optional = true }
tokio = { version = "1.19.2", features = ["macros", "net", "fs", "sync", "rt", "io-util", "rt-multi-thread", "time"] }
serde_yaml = "0.8.24"
log = "0.4.17"
structopt = { version = "0.3.26", optional = true }

[features]
default = ["full"]
full = ["from-str", "discover", "cli"]
from-str = ["itertools"]
discover = []
cli = ["structopt", "discover"]

[dev-dependencies]
env_logger = "0.9.0"

[badges]
maintenance = { status="actively-developed" }
